feat: add article seeds endpoint
